@@ -1,19 +1,0 @@
-#!/usr/bin/env raku
-#t/01.san.rakutest
-#TESTALL$ prove6 ./t      [from root]
-use lib '../lib';
-use Test;
-plan 1;
-
-use PDF::Extract;
-
-load-sample-pdf;
-
-my $file = "$*HOME/sample.pdf";
-
-my $extract = Extract.new: :$file;
-
-ok ($extract.text ~~ /quam/).so,            '.text';
-
-drop-sample-pdf;
-#done-testing;
