@@ -12,6 +12,11 @@ Revision history for PDF::Extract
       on MacOS and Windows (and tested them in the workflows tests)
     - Renamed 'resources/sample copy.pdf' to 'resources/sample-copy.pdf'
       because of the save causing problems
+    - Added tests
+    - Moved the resources files to the 't' directory, deleted the 'copy'
+      file
+    - Removed the subroutines and incorporated the test into a cmp-ok test
+    - Removed the bin file
 
 0.0.4  2024-08-08T00:00:00+00:00
     -previous manual release
